# nightingale-hacking

./: .gitattributes  .gitignore  .travis.yml  CONTRIBUTING.md  INSTALL  LICENSE  Makefile  Makefile.in  README  README.md  TRADEMARK.txt  aclocal.m4  add_search_for_gst_libs.patch  allmakefiles.sh  build.sh  configure  configure.ac  nightingale.config  nightingale.desktop  nightingale.mk  songbird-2k5-DONOTUSE.sln  songbird-2k5.sln  songbird-DONOTUSE.sln  songbird.mk  songbird.sln  test.txt
.tx/: config
app/: Info.plist  Info.plist.in  Makefile.in  Songbird.bat  app-2k5.vcproj  app.vcproj  application.ini  application.ini.in  application.ini.in.BACKUP.6519.in  application.ini.in.LOCAL.6519.in  blocklist.xml  chrome.manifest.in  chrome.manifest.in.release  nightingale.ini.in  songbird.ini.in  updater.ini
app/.svn/: all-wcprops  dir-prop-base  entries
app/branding/: Makefile.in  jar.mn  jar.mn.in  nightingale.icns  nightingale.xpm  sbBrandingStrings.ini  songbird.icns  songbird.xpm
app/chrome/: chrome.manifest  contents.rdf  songbird-jar.mn
app/content/: Makefile.in  chrome.manifest.dev  jar.mn  songbird.mn
app/icons/: Makefile.in  songbird.icns
app/manifests/: Makefile.in  chrome.manifest.in  components.manifest.in  interfaces.manifest.in  jscomponents.manifest.in  vendor.manifest.in
app/preferences/: Makefile.in  browser-prefs.js  nightingale-debug-prefs.js  nightingale-prefs.js.in  nightingale-update-prefs.js  songbird-channel-prefs.js.in  songbird-debug-prefs.js  songbird-debug-prefs.js.in  songbird-prefs.js  songbird-prefs.js.in  songbird-update-prefs.js  songbird-update-prefs.js.in
app/profile/: Makefile.in  mimeTypes.rdf
app/skin/: Makefile.in
bindings/: Makefile.in
bindings/.svn/: all-wcprops  entries
bindings/public/: Makefile.in  sbIMediaItemStatusEvent.idl  sbIPlaylistClickEvent.idl  sbIPlaylistWidget.idl  sbITabBrowser.idl
branding/: Makefile.in  branding.mk  nightingale-zzz-branding.js.in  songbird-zzz-branding.js.in
branding/.svn/: all-wcprops  entries
compiled/: Makefile  config.status
compiled/app/: Makefile
compiled/bindings/: Makefile
compiled/branding/: Makefile
compiled/dependencies/: Makefile
compiled/documentation/: Makefile
compiled/extensions/: Makefile
compiled/feathers/: Makefile
compiled/installer/: Makefile
compiled/locales/: Makefile
compiled/tools/: Makefile
compiled/update/: Makefile
components/: Makefile.in
components/.svn/: all-wcprops  dir-prop-base  entries
components/aboutprotocol/: Makefile.in  sbSongbirdProtocol.js
components/addonmetadata/: Makefile.in  addonmetadata.vcproj
components/addonpanes/: addonpanes.vcproj
components/albumart/: Makefile.in
components/appstartup/: Makefile.in
components/bundle/: Makefile.in  bundle-2k5.vcproj  bundle.vcproj
components/commandline/: Makefile.in  commandline.vcproj
components/contenthandling/: Makefile.in
components/controller/: Makefile.in  controller.vcproj
components/dataremote/: Makefile.in  dataremote-2k5.vcproj  dataremote.vcproj
components/dbengine/: Makefile.in  dbengine.vcproj
components/devices/: Makefile.in  devices.vcproj
components/devicesobsolete/: Makefile.in
components/displaypanes/: Makefile.in
components/draganddrop/: Makefile.in  draganddrop.vcproj
components/equalizerpresets/: Makefile.in
components/faceplate/: Makefile.in  faceplate.vcproj
components/faceplateregistration/: faceplateregistration-2k5.vcproj  faceplateregistration.vcproj
components/feathers/: Makefile.in  feathersmanager.vcproj
components/filesystemevents/: FileSystemComponent.cpp  Makefile.in  sbFileSystemCID.h
components/include/: include.vcproj  ngReentrantMonitor.h  sbArrayUtils.h  sbClassInfoUtils.h  sbDebugUtils.h  sbIndex.h  (+12 more)
debian/: changelog  control  copyright  docs  links  lintian-overrides  nightingale-unity-integration.install  nightingale.1.in  nightingale.desktop  nightingale.install  nightingale.links  nightingale.manpages  rules  watch
dependencies/: Makefile.in  linux-i686-1.11.tar.lzma.md5  linux-i686-1.12-20130101-release.tar.lzma.md5  linux-i686-1.12-20130316-release-final.tar.lzma.md5  linux-i686-2.2.0-20120929-release.tar.lzma.md5  linux-x86_64-1.11.tar.lzma.md5  linux-x86_64-1.12-20130101-release.tar.lzma.md5  linux-x86_64-1.12-20130316-release-final.tar.lzma.md5  linux-x86_64-2.0.2-20120929-release.tar.lzma.md5  linux-x86_64-2.2.0-20120922-release.tar.lzma.md5  linux-x86_64-2.2.0-20120926-release.tar.lzma.md5  linux-x86_64-2.2.0-20120929-release.tar.lzma.md5  macosx-i686-1.11.tar.bz2.md5  macosx-i686-1.12-20130130-release.tar.bz2.md5  macosx-i686-1.12.1-20140419.tar.bz2.md5  macosx-i686-20140419.tar.bz2.md5  vendor-1.11.zip.md5  vendor-1.12.zip.md5  vendor-2.2.0.zip.md5  windows-i686-1.11-20121110-release.tar.lzma.md5  windows-i686-1.11.tar.lzma.md5  windows-i686-1.12-20130111-release.tar.lzma.md5  windows-i686-1.12-20130121-release.tar.lzma.md5
documentation/: Makefile.in  build-documentation.sh  customdoxygen.css  footer.html  footerFile  header.html  headerFile  make-sdkapi-docs.sh  make-webpageapi-docs.sh  nightingale.doxyfile  songbird.dox  songbird.dox.in
extensions/: Makefile.in
feathers/: Makefile.in  feathers.vcproj
gst-plugins/: Makefile.in
installer/: LICENSE.txt  MacSongbirdInstall.icns  Makefile.in  PrepareInstaller.bat  PrepareStaging.bat  PublishInstaller.bat  Songbird.nsi  chrome.manifest.dev  installer.vcproj
locales/: Makefile.in  all-locales-jar.mn  jar.mn  jar.mn.in  locales-2k5.vcproj  locales.vcproj
manifests/: Makefile.in  chrome.manifest.in  components.manifest.in  interfaces.manifest.in  jscomponents.manifest.in  libs.manifest.in  vendor.manifest.in
psd/: ngale-splash.psd
test-harness/: Makefile.in  head_songbird.js  test_all.sh  test_helloWorld.js
tools/: Makefile.in
update/: Makefile.in  files-added-to-windows  files-removed-from-linux.in  files-removed-from-macosx.in  files-removed-from-windows.in  manifest.linux-i686  manifest.linux-x86_64  manifest.macosx-i686  manifest.windows-i686-msvc8
vcproj/: make-project.sh  readme.txt
web/: bundle.xml
(+12876 files in other folders)
